# mammos-mumag

./: .gitignore  .pre-commit-config.yaml  Apptainer.def  Dockerfile  MANIFEST.in  README.md  Singularity.def  escript5.yaml  pyproject.toml
.binder/: environment.yml
.github/: environment.yml
.github-templates/workflows/: apptainer.yml  podman.yml
.github/workflows/: apptainer.yml  build.yml  build_apptainer.yml  cd.yml  check-changelog.yml  documentation.yml  podman.yml  publish-release.yml  publish.yml  test.yml  workflow.yml
binder/: environment.yml
container_scripts/: Apptainer.def  Dockerfile
container_scripts/patches/: dependencies.py  escript.yaml  hp_options.py
dev/1D-poisson/: README.md  skfem.ipynb
dev/1D-poisson/fenics-gmsh/: create-interval-mesh.ipynb  fenics-gmsh.ipynb  fenics.ipynb  interval.msh
dev/1D-poisson/fenics-simple/: fenics.ipynb
dev/1D-poisson/skfem/: skfem.ipynb
dev/1D-poisson/skfem-gmsh/: skfem-gmsh.ipynb
dev/1D-poisson/skfem-tags/: create-interval-mesh.ipynb  interval.msh  skfem.ipynb
dev/2D-poisson/: README.md  disk.med  skfem-gmsh.ipynb  skfem-salome.ipynb
dev/gmsh-skfem/: cube.msh
docs/source/: conf.py  index.rst
docs/source/mammos_mmag_autodoc/: mammos_mmag.rst  modules.rst
docs/source/mammos_mumag_autodoc/: mammos_mumag.rst
docs/source/mmag_autodoc/: mmag.rst  modules.rst
docs/source/notebooks/: examples.rst  hysteresis_loop.ipynb  materials_io.ipynb  parameters_io.ipynb  scripts.ipynb  unvtofly.ipynb
docs/source/notebooks/data/: materials.yaml
examples/: additional-functionality.ipynb  hysteresis.ipynb  hysteresis_loop.ipynb  index.rst  materials_io.ipynb  parameters_io.ipynb  quickstart.ipynb  run_python_files.ipynb  scripts.ipynb  unvtofly.ipynb
examples/data/: materials.yaml  parameters.yaml
examples/demagnetization/: cube.krn  cube.p2  cube_simulation.py  demagnetization.py  new.py  run.slurm  test.py
examples/escript/examples/: rosenbrock.py
examples/rosenbrock/: rosenbrock.py
examples/standard_problem_3/: cube.py  mumag3.py
mumag/escript/examples/: rosenbrock.py
mumag/pymag/examples/demagnetization/: cube.p2
mumag/pymag/examples/standard_problem_3/: cube.py  mumag3.py
mumag/pymag/meshing/: cube.p2  cube.py
mumag/pymag/py/: exani.py  external.py  hmag.py  lbfgs.py  loop.py  magnetization.py  materials.py  matrix.py  mesh.py  minimize.py  tools.py
mumag/pymag/t/: cube.p2
mumag/pymag/t/output/: cube.0001.vtu  cube.0002.vtu  cube.0003.vtu  cube.0004.vtu  out.txt
patches/: dependencies.py
sim_scripts/: loop.py
src/hystmag/: __init__.py  cli.py  cli_helpers.py  tofly.py
src/hystmag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mammos_mmag/: __init__.py  materials.py  parameters.py  simulation.py  tofly.py  tools.py
src/mammos_mmag/scripts/: exani.py  external.py  loop.py  magnetization.py  materials.py  tools.py
src/mammos_mmag/templates/: krn.jinja  p2.jinja
src/mammos_mumag/: __init__.py  hysteresis.py  hysteresis_loop.py  materials.py  mesh.py  parameters.py  postprocess.py  results.py  simulation.py  standard_problem.py  tofly.py  tools.py
src/mammos_mumag/scripts/: loop.py  minimizers.py
src/mammos_mumag/templates/: krn.jinja
src/mammosmag/: __init__.py  cli.py  cli_helpers.py  exani.py  external.py  hmag.py  lbfgs.py  loop.py  magnetisation.py  materials.py  minimize.py  tofly.py  tools.py
src/mammosmag/container_scripts/: Apptainer.def
src/mammosmag/container_scripts/patches/: SConstruct  hp_options.py
src/mammosmag/scripts/: exani.py  external.py  loop.py  magnetisation.py  materials.py
src/mammosmag/sim_scripts/: external.py  hmag.py  lbfgs.py  materials.py  matrix.py
src/mmag/: __init__.py  cli.py  cli_helpers.py  exani.py  external.py  hmag.py  loop.py  magnetisation.py  magnetization.py  materials.py  minimize.py  parameters.py  simulation.py  tofly.py  tools.py
src/mmag/container_scripts/patches/: dependencies.py
src/mmag/scripts/: exani.py  external.py  hmag.py  loop.py  magnetisation.py  materials.py
src/mmag/sim_scripts/: lbfgs.py  loop.py  magnetization.py  mapping.py  matrix.py  minimize.py  minimizers.py  tools.py
src/mmag/templates/: p2.jinja
test/: generate_data.py  test_exani.py  test_external.py  test_hmag.py  test_loop.py  test_magnetization.py  test_mapping.py  test_materials.py  test_materials_file.py  test_parameters_files.py
test/data/hmag/: cube.krn
test/data/loop/: cube.0001.vtu  cube.0002.vtu  cube_0000.vtu
test/data/magnetization/: cube.p2
test/loop/: out.0000.vtu  out.0001.vtu  out.0002.vtu  out.fly
tests/: test_hysteresis.py  test_materials_file.py
tools/: Apptainer.def  Dockerfile  build.py
tools/containers/: Apptainer.def
tools/scripts/: external.py  hmag.py  loop.py  mesh.py  solvers.py
tools/simulation_scripts/: exani.py
